k8s/prd/prd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prd-carrinhodigital-webapi
  labels:
    app: carrinhodigital-webapi
    env: prd
spec:
  selector:
    matchLabels:
      app: carrinhodigital-webapi
      env: prd
  template:
    metadata:
      labels:
        app: carrinhodigital-webapi
        env: prd
    spec:
      containers:
        - name: prd-carrinhodigital-webapi
          image: gcr.io/carrinhodigital/webapi:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "500M"
            limits:
              cpu: "750m"
              memory: "1.2G"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gcp-credentials
              mountPath: /etc/config
      imagePullSecrets:
        - name: gcr-docker-image-credentials
      volumes:
        - name: gcp-credentials
          configMap:
            name: prd-gcp-configmap
            items:
              - key: application-credentials
                path: google_application_credentials.json
