k8s/prd/prd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prd-carrinhodigital-service
  labels:
    app: carrinhodigital-webapi-service
    env: prd
spec:
  type: ClusterIP
  selector:
    app: carrinhodigital-webapi
    env: prd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
