k8s/prd/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prd-redis-socket-connections
  labels:
    app: prd-redis-socket-connections
spec:
  containers:
    - name: prd-redis-socket-connections
      image: redis:6.0-alpine
      ports:
        - containerPort: 6379
      resources:
        requests:
          cpu: "50m"
          memory: "200M"
        limits:
          cpu: "250m"
          memory: "400M"

---
apiVersion: v1
kind: Service
metadata:
  name: prd-redis-socket-connections-svc
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: prd-redis-socket-connections
