k8s/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prd-carrinhodigital-service
  labels:
    app: carrinhodigital-webapi
    env: prd
spec:
  selector:
    app: carrinhodigital-webapi
  ports:
    - port: 80
      targetPort: 8080
      name: http
