k8s/prd/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: carrinhodigital-ingress-route
spec:
  entrypoints:
    - web
  routes:
    - match: Host('api.carrinhodigital.co')
      kind: Rule
      serivces:
        - name: prd-carrinhodigital-service
          port: 80
